commit on 'master'

--- a/references.bib
+++ b/references.bib
@@ -1,52 +1,56 @@
-@misc{drop-culture-Fox-2021,
-author={{Fox Ellis Agency.}},
+@misc{1,
+author={{Fox Ellis Agency}},
 title ={The ‘Drop’ Culture Strategy.},
 note={Accessed on Nov. 3, 2021.},
 howpublished={\url{https://www.foxellissports.com/post/the-drop-culture-strategy}},
 }
 
-@misc{drops-sneakers-Koss-2021,
-author={{Koss, Hal.}},
+@misc{2,
+author={{Koss, Hal}},
 title ={Product Drops Aren’t Just for Sneaker Brands.},
 note={Accessed on Jul. 14, 2021..},
 howpublished={\url{https://builtin.com/marketing/product-drops-digital}},
 }
 
-@misc{bots-gifts-Hunt-2021,
-author={{Hunt, Joshua.}},
+@misc{3,
+author={{Hunt, Joshua}},
 title ={You Could Be Competing With Bots to Buy Gifts This Christmas.},
 note={Accessed on Oct. 25, 2021.},
 howpublished={\url{https://www.bloomberg.com/news/features/2021-10-25/how-bots-are-buying-up-all-this-year-s-hottest-christmas-gifts}},
 }
 
-@misc{streetwear-impact-SnR-2021,
+@article{4,
+author={{Kahneman, Daniel, et al.}},
+title ={Fairness as a Constraint on Profit Seeking: Entitlements in the Market.},
+  journal   = {The American Economic Review},
+  volume    = {vol. 76, no. 4},
+  year      = {1986},
+  url       = {http://www.jstor.org/stable/1806070}
+}
+
+@misc{5,
 author={{Strategy \& Report.}},
 title ={Streetwear Impact Report.},
 year={2019.},
 howpublished={\url{https://strategyand.hypebeast.com/streetwear-report}},
 }
 
-@misc{supreme-drop-FAZ-2021,
+@misc{6,
 author={{Ffooks, Avalon and Zak Maoui.}},
 title ={Beat the Supreme Drop System with Ease.},
 note={May, 5, 2021.},
 howpublished={\url{https://www.gq-magazine.co.uk/article/beat-the-supreme-drop-system}},
 }
 
-@misc{nike-quote-Hunt,
-author={{Hunt, Joshua.}},
-title ={Quote from Nike spokesperson Sandra Carreon-John.},
-}
-
-@misc{online-ticket-Wiki-2021,
-author={{Wikipedia.}},
+@misc{10,
+author={{Wikipedia}},
 title ={Better Online Ticket Sales Act.},
 note={Accessed on Nov. 9, 2021.},
 howpublished={\url{https://en.wikipedia.org/wiki/Better\_Online\_Tickets\_Sales\_Act}},
 }
 
 %11
-@misc{bots-act-FTC-2021,
+@misc{11,
 author={{Federal Trade Commission.}},
 title ={FTC Brings First-Ever Cases Under the BOTS Act.},
 note={Accessed on Nov. 9, 2021.},
@@ -54,28 +58,34 @@ howpublished={\url{https://www.ftc.gov/news-events/press-releases/2021/01/ftc-br
 }
 
 %12
-@misc{2019-mainsale-BMP-2019,
-author={{Burning Man Project.}},
+@misc{12,
+author={{Burning Man Project}},
 title ={Addressing Issues with our 2019 Main Sale.},
-note={Apr, 11, 2019.},
+note={Apr. 11, 2019.},
 howpublished={\url{https://journal.burningman.org/2019/04/news/brc-news/2019-main-sale-issues/}},
 }
 
-%13
-@misc{jacque-slade-quote-Hunt,
-author={{Hunt, Joshua.}},
-title ={Quote from Jacques Slade (popular sneaker influencer).},
-}
-
-%15
-@misc{pat-sullivan-quote-Hunt,
-author={{Hunt, Joshua.}},
-title ={Quote from Patrick Sullivan, CTO of Akamai..},
+@misc{17,
+author={{Stobierski, Tom}},
+title ={Willingness to Pay: What It Is \& How To Calculate},
+note={Oct. 20, 2020.},
+howpublished={\url{https://online.hbs.edu/blog/post/willingness-to-pay?tempview=logoconvert}},
 }
 
 
+@misc{18,
+author={{Buterin, Vitalik}},
+title ={Alternatives to selling at below-market-clearing prices for achieving fairness (or community sentiment, or fun)},
+note={Apr. 22, 2021.},
+howpublished={\url{https://vitalik.ca/general/2021/08/22/prices.html}},
+}
 
-
+@misc{19,
+author={{Buterin, Vitalik}},
+title ={Alternatives to selling at below-market-clearing prices for achieving fairness (or community sentiment, or fun)},
+note={Apr. 22, 2021.},
+howpublished={\url{https://vitalik.ca/general/2021/08/22/prices.html}},
+}
 
 
 
