--- a/whitepaper.tex
+++ b/whitepaper.tex
@@ -84,9 +84,9 @@ These Supreme drops would occur at their physical store every Thursday, with peo
 
 Still, this didn’t prevent resellers with the means to do so from paying individuals to wait in line for them, knowing they would more than recoup the cost in the secondary market.
 
-However, as more retailers began offering drops online, the process that used to involve camping out has now entered the world of high-tech arbitrage - in particular, automated Bots: web scrapers, automated shopping cart ‘sniper’ bots, and login and checkout abusers.\cite{7} These Bots are run by everyone from individual 15-year-old kids sitting in a basement somewhere making \$200,000 a year reselling sneakers, to organized reseller syndicates called “cooks” who deploy professional scraping software\footnote{Cybersole, GaneshBot, and Kodai to name a few.}  to scour the website for the stock-keeping units, or SKUs, associated with new inventory. As new SKUs come online, the bots add each item associated with that unique ID number to a shopping cart, and once the sale starts, they try to complete the checkout process using a preloaded credit card or gift card information. Non-bot-using customers hate them because it’s almost impossible to check out faster than a bot can. Frequently, one or two bots buy up a large chunk of the product simply to resell it – a poor customer experience for everyone.\cite{8}
+However, as more retailers began offering drops online, the process that used to involve camping out has now entered the world of high-tech arbitrage - in particular, automated Bots: web scrapers, automated shopping cart ‘sniper’ bots, and login and checkout abusers.\cite{3} These Bots are run by everyone from individual 15-year-old kids sitting in a basement somewhere making \$200,000 a year reselling sneakers, to organized reseller syndicates called “cooks” who deploy professional scraping software\footnote{Cybersole, GaneshBot, and Kodai to name a few.}  to scour the website for the stock-keeping units, or SKUs, associated with new inventory. As new SKUs come online, the bots add each item associated with that unique ID number to a shopping cart, and once the sale starts, they try to complete the checkout process using a preloaded credit card or gift card information. Non-bot-using customers hate them because it’s almost impossible to check out faster than a bot can. Frequently, one or two bots buy up a large chunk of the product simply to resell it – a poor customer experience for everyone.\cite{3}
 
-These bots have led to hugely inflated prices in a secondary market effectively controlled by rent-seeking individuals, making many of the products inaccessible to the primary customers who value them most. Nike sees this as a problem: \emph{“We are constantly looking at the best way to combat bots across our digital ecosystem. Nike is fully committed to making sure that our real, loyal consumers are the ones who get fair access to our products and that we continue to evolve best-in-class solutions in the marketplace.”}\cite{9} 
+These bots have led to hugely inflated prices in a secondary market effectively controlled by rent-seeking individuals, making many of the products inaccessible to the primary customers who value them most. Nike sees this as a problem: \emph{“We are constantly looking at the best way to combat bots across our digital ecosystem. Nike is fully committed to making sure that our real, loyal consumers are the ones who get fair access to our products and that we continue to evolve best-in-class solutions in the marketplace.”}\cite{3} 
 
 \begin{figure}[H]
 \centering
@@ -96,14 +96,14 @@ These bots have led to hugely inflated prices in a secondary market effectively 
 
 In 2016, Congress enacted the BOTS Act (Better Online Ticket Sales Act) attempting to legally close this loophole for event tickets.\cite{10}   But in 5 years only a single case has been brought to court by the FTC, who are tasked with enforcing the act.\cite{11}   Meanwhile, Bots are still wreaking havoc on ticket markets.  Take for instance Burning Man, whose core values are “Radical Inclusion, Diversity, and Equity”.  They admit that their 2019 public ticket sale (the last year the event was held due to COVID) was dominated by Bots.\cite{12}   That’s a direct affront to their values.
 
-Regardless of the BOTS lack of bite, the legislation does not cover other products.  As such, companies are taking it upon themselves to combat Bots in the name of equity for their loyal consumers.  \emph{“People are still asking for transparency, and they are still frustrated and angry”.}\cite{13}
+Regardless of the BOTS lack of bite, the legislation does not cover other products.  As such, companies are taking it upon themselves to combat Bots in the name of equity for their loyal consumers.  \emph{“People are still asking for transparency, and they are still frustrated and angry”.}\cite{3}
 
-Primary retailers tried using online raffles rather than first-come first-served sales, but those too have been defeated by bots buying up all the raffle tickets.  This has led them to fighting fire with fire, utilizing anti-bot software such as Akamai, at great cost.  Akamai brings in just under \$200M a year and is growing 40\% annually.\cite{14}
+Primary retailers tried using online raffles rather than first-come first-served sales, but those too have been defeated by bots buying up all the raffle tickets.  This has led them to fighting fire with fire, utilizing anti-bot software such as Akamai, at great cost.  Akamai brings in just under \$200M a year and is growing 40\% annually.\cite{3}
 
-It’s turned into a cat and mouse game, with Bots becoming more sophisticated in response.  Disturbingly, with the COVID-driven increase in ecommerce, and current worldwide supply chain issues, the problem with Bots is only getting worse. \emph{“People will try to jump the line and leverage automation to grab anything that has a limited inventory.  It used to be concert tickets, then purses and tennis shoes, and now it’s vaccine reservations and even more mundane things.”}\cite{14}
+It’s turned into a cat and mouse game, with Bots becoming more sophisticated in response.  Disturbingly, with the COVID-driven increase in ecommerce, and current worldwide supply chain issues, the problem with Bots is only getting worse. \emph{“People will try to jump the line and leverage automation to grab anything that has a limited inventory.  It used to be concert tickets, then purses and tennis shoes, and now it’s vaccine reservations and even more mundane things.”}\cite{3}
 
 \subsection{Solution Attributes} 
-While Bots damage customer experience, they have created a conundrum.  The inflated resale market is now integral to how drops work, as it serves as a metric for a brand’s success: higher resale price tags mean greater hype, and greater hype means a higher brand value.\cite{16}
+While Bots damage customer experience, they have created a conundrum.  The inflated resale market is now integral to how drops work, as it serves as a metric for a brand’s success: higher resale price tags mean greater hype, and greater hype means a higher brand value.\cite{5}
 	
 Brands would prefer to replace the brand value \emph{generated by Bots inflating the market} with brand value \emph{generated as close to the customer as possible.}  Therefore, a better solution to the problem must include two key characteristics:
 \begin{enumerate}
@@ -343,7 +343,7 @@ Regardless of fulfillment method, once the Participant has received or sold thei
 
 The platform derives value for itself primarily through staking assets held in lotteries and NFTs for yield.  This yield can then be funneled into a treasury smart contract within the platform.  In addition, a portion of the Residual can be captured by the platform as a fee for service.  
 
-\subsubsection{Yield Farming.}  Stakes and collateral held within the platform can be used to generate yield (interest) through such platforms as 88mph and Aave, similar to a Lossless lottery such as PoolTogether.\cite{19}   An algorithm which takes into account inflows and outflows, along with the current level of the treasury, can maximize the amount used to generate yields and rebalance every 24 hours (lock out time post-lottery’s end).  
+\subsubsection{Yield Farming.}  Stakes and collateral held within the platform can be used to generate yield (interest) through such platforms as 88mph and Aave, similar to a Lossless lottery such as PoolTogether.\footnote{https://pooltogether.com/}   An algorithm which takes into account inflows and outflows, along with the current level of the treasury, can maximize the amount used to generate yields and rebalance every 24 hours (lock out time post-lottery’s end).  
 
 \subsubsection{Residual and the Treasury.}  Since all monies coming into the platform are in stablecoins, the treasury is in one or more stablecoins.  Here is the initial model we propose for distribution of the Residual:
 
@@ -397,10 +397,70 @@ Ultimately, DropShop can go beyond Drops to enable user to user asset transactio
 \section*{Appendix}
 \appendix
 
-\section{Distribution Functions}\label{APP-DistributionFunctions}
+\section{Distribution Score}\label{APP-DistributionFunctions}
+The distribution of Sponsor Tokens is critical for \textbf{DropShop} users. For a sponsor competing with others, it would be beneficial to tell its potential participants how well its `Sponsor Tokens` is distributed so that it has a fairer chance to win the lottery than those brands with poorly distributed `Sponsor Tokens`. Besides, participants would know they have a good chance to win with the information about the distribution of `Sponsor Tokens`.  
+
+There are many indices and coefficients to measure the distribution of numeric values. DropShop utilizes a simple and well-known `GINI` coefficient. It is often mentioned in world economic news articles and used in the context of how well a nation's wealth is distributed among its population.
+
+The Gini coefficient is defined using the auxiliary curve, called Lorenz curve. In the context of `Brand Tokens`, Lorenz curve is defined the following function: for $x$ in $[0,1]$,
+\begin{equation}\label{eq:Lorenz}
+f(x) =  \frac{ \sum_{\mathrm{R} (p) \leq x} \mathrm{BT} (p) }{\sum_{p} \mathrm{BT} (p)},
+\end{equation}
+where the function $\mathrm{BT}$ map each token holder $p$ to his/her token amount and $\mathrm{R}$ to his/her rank ratio from the bottom among all the token holders. Thus the function maps for each $x$ between $0$ and $1$ the proportion of the token holders who belong to the bottom $x$ of token holders in token amount.
+
+Then, the `Gini` coefficient is defined:
+$$
+\textrm{Gini coefficient} = 1 - 2 \times \textrm{Area under the Lorenz curve}
+$$
+The `Gini coefficient` can be also defined graphically. In Figure \ref{fig:Lorenz}, there are two curves, a linear curve and a Lorenz curve. A linear curve represents the population where the wealth or token is distributed  equally. And a Lorenz curve is the curve defined by the function \ref{eq:Lorenz}. Then the Gini coefficient is defined to be
+$$
+\frac{A}{A+B}.
+$$
+A population of equal wealth has Gini coefficient $0$ because the area $A$ is equal to $0$. However, a population with one person having all has Gini coefficient  $1$ because the area under the Lorenz curve is $0$.
+
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.7]{Figures_and_Tables/LorenzCurve.png}
+\caption{Lorenz Curve and Gini coefficient.}
+\label{fig:Lorenz}
+\end{figure}
 
 
-\section{TWF}\label{APP-TWF}
+
+\section{Ticket Weight Functions}\label{APP-TWF}
+Ticket weights are dependent upon price premium and token as mentioned in Section \ref{subsection-Ticketing}. Price premium is the amount a participant is willing to pay more than the base price and brand token is the amount of token in a participants address given by the brand.
+
+It is the brand that determines the ticket weight function for its customer. One would value more the token it has given out, and the other would price premium more. This feature, the intention of the brand, is coded into the ticket weight function. The prototype of the function is a polynomial of form:
+$$
+p^n \times t^m
+$$
+where $p$ and $t$ represents price premium and token, respectively.
+
+The following graphs are the results of the simulations of the case $n=1$ and $m=2,3,4$. The winners are red dots and the size of the dot represents the ticket weight.
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.48]{Figures_and_Tables/simulation_n1m2.png}
+\caption{Simulation of the TWF with $n=1$ and $m=2$. }
+\label{fig:Lorenz}
+\end{figure}
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.48]{Figures_and_Tables/simulation_n1m3.png}
+\caption{Simulation of the TWF with $n=1$ and $m=3$. }
+\label{fig:Lorenz}
+\end{figure}
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.48]{Figures_and_Tables/simulation_n1m4.png}
+\caption{Simulation of the TWF with $n=1$ and $m=4$. }
+\label{fig:Lorenz}
+\end{figure}
+
+The graphs above suggests that the randomness spreads the winners all over the place. However, as the function weighs more on tokens, most dots on the left-hand side are red.
+
+
+
+
 
 
 \section{Token Protocol}\label{APP-TokenProtocol}
@@ -427,8 +487,8 @@ The authors warmly thank the ChainLink team for sharing historical price feed ad
 % \bibliography{mybibliography}
 %
 
-% \bibliographystyle{splncs04}
-% \bibliography{references}
+\bibliographystyle{splncs04}
+\bibliography{references}
 
 
 
